--- a/helicopter_rescue/Assembly-CSharp.csproj
+++ b/helicopter_rescue/Assembly-CSharp.csproj
@@ -47,6 +47,9 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BallDestroy.cs" />
      <Compile Include="Assets\Scripts\BallsManager.cs" />
+     <Compile Include="Assets\Scripts\BlueBallCheck.cs" />
+     <Compile Include="Assets\Scripts\CenterChecker.cs" />
+     <Compile Include="Assets\Scripts\GreenBallCheck.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\YellowBallCheck.cs" />
      <Compile Include="Assets\Scripts\YellowMover.cs" />
